syntax = "proto3";

option csharp_namespace = "TaskManager.Api.Query";

message ManagedTask {
    string id = 1;
    string name = 2;
    string description = 3;
    string createdDateTime = 4;
    string dueDateTime = 5;
    bool isDone = 6;
}

// Tasks list
message TasksRequest {
  int32 limit = 1;
  int32 offset = 2;
  string dueDateTime = 3;
  bool isDone = 4;
}

message TasksResponse {
  repeated ManagedTask tasks = 1;
}

// Task by id
message TaskRequest {
  string id = 1;
}

message TaskResponse {
  ManagedTask task = 1;
}

// Service definition
service QueryTaskService {
  rpc QueryTasks(TasksRequest) returns (TasksResponse) {}

  rpc QueryById(TaskRequest) returns (TaskResponse) {}
}